[tool.poetry]
name = "doa_signal_generator"
version = "0.1.0"
description = "A basic module to generate synthetic signals that can be used on DOA/beamforming algorithms"
authors = ["hkxs <lalvarezf25@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
bandit = "^1.7.10"
flake8 = "^7.1.1"
flake8-import-order = "^0.18.2"
flake8-pyproject = "^1.2.3"
mypy = "^1.13.0"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 120
count = true
per-file-ignores = [
    "__init__.py:F401",
    "__main__.py:E501",
]
import-order-style = "pycharm"

[tool.mypy]
files = "src"
disable_error_code = "import-untyped"

[tool.bandit]
exclude_dirs = [
    "tests",
    "docs"
]
